fix: invalid method List.of being used in interact listener